k8s-manifests/prospectos-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prospectos-backend-app-service
  namespace: backend-ns
  labels:
    app: prospectos-backend-app
spec:
  selector:
    app: prospectos-backend-app
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8081
  type: ClusterIP
