k8s-manifests/prospectos-backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prospectos-backend-ingress
  namespace: backend-ns
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - prospectos-api.pdmmonitor.com
      secretName: prospectos-backend-tls
  rules:
    - host: prospectos-api.pdmmonitor.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prospectos-backend-app-service
                port:
                  number: 80
